Sun Jun 28 07:25:12 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.cc,src/kml.h,src/printing.cc: Implement exporting of survey
	  legs in KML format.

Sun Jun 28 07:20:09 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.h: Whitespace tweak.

Sun Jun 28 07:18:42 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.cc: Put coloured "pin" icons into KML files, like we do for
	  GPX files.

Sat Jun 27 12:46:03 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Use wxSystem() rather than conditionally calling
	  system() or _wsystem() depending on the platform.

Sat Jun 27 12:45:22 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Use wxAtof() to get double from wxString.

Sat Jun 27 12:44:04 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc,src/mainfrm.cc: Use wxFopen() rather than
	  conditionally calling fopen() or _wfopen() depending on the platform.

Sat Jun 27 12:42:57 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Create wxFileInputStream directly, avoiding
	  intermediate file descriptor.

Sat Jun 27 12:41:32 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Use wxGetenv() to read the SURVEXEDITOR variable,
	  so we can accept Unicode values on Windows.

Sat Jun 27 06:51:29 GMT 2015  Olly Betts <olly@survex.com>

	* src/netskel.c: Fix use after free after *solve.  This only occurs if
	  a leg between the two exact same stations appears right before and
	  right after the *solve, which is unlikely in real data, but the
	  testsuite has an instance of this.  This was introduced by the repeat
	  leg averaging added in 1.2.17.

Sat Jun 27 06:49:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/netartic.c: Fix small memory leak when solving network.  This
	  doesn't really matter when solving at the end of processing as cavern
	  will exit after that, but if *solve is used we continue processing
	  after solving.

Sat Jun 27 04:36:39 GMT 2015  Olly Betts <olly@survex.com>

	* src/message.c: Fix comment typo.
