@@ -1,3 +1,7 @@
+Sun Jun 28 09:28:56 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/kml.cc: Use the "paddle" placemarkers rather than push pins.
+
 Sun Jun 28 07:25:12 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/kml.cc,src/kml.h,src/printing.cc: Implement exporting of survey
